@@ -3,6 +3,7 @@
 
 <!-- 
 Qubino:  ZMNHTDx Smart meter Z-Wave+
+SW version S4,S5 & S6
 ZMNHTD1 868,4 MHz
 ZMNHTD2 921,4 MHz
 ZMNHTD3 908,4 MHz
@@ -14,99 +15,171 @@ ZMNHTD5 916,0 MHz
 	<CommandClass id="112">
 		<Value type="list" genre="config" instance="1" index="7" label="Input 1 switch function selection" size="1" min="0" max="5" value="4">
 			<Help>Default value 4</Help>
-			<Item label="Disabled" value="0" />
-			<Item label="IR external relay control - mono stable push button" value="2" />
-			<Item label="IR external relay control - bi stable switch" value="3" />
-			<Item label="External relay control - mono stable push button" value="4" />
-			<Item label="External relay control - bi stable switch" value="5" />
+			<Item label="Disabled" value="0"/>
+			<Item label="IR external relay control - mono stable push button" value="2"/>
+			<Item label="IR external relay control - bi stable switch" value="3"/>
+			<Item label="External relay control - mono stable push button" value="4"/>
+			<Item label="External relay control - bi stable switch" value="5"/>
 		</Value>
-	
+
 		<Value type="list" genre="config" instance="1" index="10" label="Activate / deactivate functions ALL ON/ALL OFF" size="2" min="0" max="255" value="255">
 			<Help>Smart meter module responds to commands ALL ON / ALL OFF that may be sent by the main controller or by other controller belonging to the system.
-			Default value 255.</Help>
-			<Item label="ALL ON active, ALL OFF active" value="255" />
-			<Item label="ALL ON is not active, ALL OFF is not active" value="0" />
-			<Item label="ALL ON is not active, ALL OFF active" value="1" />
-			<Item label="ALL ON active, ALL OFF is not active" value="2" />
+				Default value 255.
+			</Help>
+			<Item label="ALL ON active, ALL OFF active" value="255"/>
+			<Item label="ALL ON is not active, ALL OFF is not active" value="0"/>
+			<Item label="ALL ON is not active, ALL OFF active" value="1"/>
+			<Item label="ALL ON active, ALL OFF is not active" value="2"/>
 		</Value>
-	
-		<Value type="short" genre="config" instance="1" index="11" label="Automatic turning off IR external relay output after set time" size="1" min="0" max="32536" value="0">
+
+		<Value type="short" genre="config" instance="1" index="11" label="Automatic turning off IR external relay output after set time" size="2" min="0" max="32536" value="0">
 			<Help>0 - Auto OFF disabled.
-			1 second to 32536 seconds Auto OFF enabled with defined time, step is 1 second.
-			Default value 0.</Help>
-		</Value> 
-	
-		<Value type="short" genre="config" instance="1" index="12" label="Automatic turning on IR external relay output after set time" size="1" min="0" max="32535" value="0">
+				1 second to 32536 seconds Auto OFF enabled with defined time, step is 1 second.
+				Default value 0.
+			</Help>
+		</Value>
+
+		<Value type="short" genre="config" instance="1" index="12" label="Automatic turning on IR external relay output after set time" size="2" min="0" max="32535" value="0">
 			<Help>0 - Auto ON disabled.
-			1 second to 32535 seconds Auto ON enabled with defined time, step is 1 second.
-			Default value 0.</Help>
+				1 second to 32535 seconds Auto ON enabled with defined time, step is 1 second.
+				Default value 0.
+			</Help>
 		</Value>
-		
-		<Value type="short" genre="config" instance="1" index="13" label="Automatic turning off External relay output after set time" size="1" min="0" max="32536" value="0">
+
+		<Value type="short" genre="config" instance="1" index="13" label="Automatic turning off External relay output after set time" size="2" min="0" max="32536" value="0">
 			<Help>0 - Auto OFF disabled.
-			1 second to 32536 seconds Auto OFF enabled with defined time, step is 1 second.
-			Default value 0.</Help>
-		</Value> 
-	
+				1 second to 32536 seconds Auto OFF enabled with defined time, step is 1 second.
+				Default value 0.
+			</Help>
+		</Value>
+
 		<Value type="short" genre="config" instance="1" index="14" label="Automatic turning on External relay output after set time" size="1" min="0" max="32535" value="0">
 			<Help>0 - Auto ON disabled.
-			1 second to 32535 seconds Auto ON enabled with defined time, step is 1 second.
-			Default value 0.</Help>
-		</Value> 
+				1 second to 32535 seconds Auto ON enabled with defined time, step is 1 second.
+				Default value 0.
+			</Help>
+		</Value>
 
 		<Value type="byte" genre="config" instance="1" index="40" label="Power reporting in Watts on power change" size="1" min="0" max="100" value="10">
 			<Help>Set value from 0 - 100 (0% - 100%).
-			0 - Reporting Disabled.
-			1 - 100 = 1% - 100% Reporting enabled.
-			Power report is send (push) only when actual power in Watts in real time change for more than set percentage comparing to previous actual power in Watts, step is 1%.
-			Default value 10.</Help>
-			</Value>
-	
-		<Value type="short" genre="config" instance="1" index="42" label="Power reporting in Watts by time interval" min="0" max="32767" value="0">
-			<Help>Set value means time interval (0 - 32767) in seconds, when power report is send.
-			0 - Reporting Disabled.
-			1 second to 32767 seconds reporting enabled.
-			Power report is send with time interval set by entered value.
-			Default value 0.</Help>
+				0 - Reporting Disabled.
+				1 - 100 = 1% - 100% Reporting enabled.
+				Power report is send (push) only when actual power in Watts in real time change for more than set percentage comparing to previous actual power in Watts, step is 1%.
+				Default value 10.
+			</Help>
 		</Value>
-		
+
+		<Value type="short" genre="config" instance="1" index="42" label="Power reporting in Watts by time interval" size="2" min="0" max="32767" value="0">
+			<Help>Set value means time interval (0 - 32767) in seconds, when power report is send.
+				0 - Reporting Disabled.
+				1 second to 32767 seconds reporting enabled.
+				Power report is send with time interval set by entered value.
+				Default value 0.
+			</Help>
+		</Value>
+
 		<Value type="list" genre="config" instance="1" index="45" label="Reset Power counters" size="1" min="0" max="15" value="0">
 			<Help>Default value 0</Help>
-			<Item label="No function" value="0" />
-			<Item label="Reset counter 1 - KWh" value="1" />
-			<Item label="Reset counter 2 - KVARh" value="2" />
-			<Item label="Reset counter 3 - KVAh" value="4" />
-			<Item label="Reset ALL counters" value="15" />
+			<Item label="No function" value="0"/>
+			<Item label="Reset counter 1 - KWh" value="1"/>
+			<Item label="Reset counter 2 - KVARh" value="2"/>
+			<Item label="Reset counter 3 - KVAh" value="4"/>
+			<Item label="Reset ALL counters" value="15"/>
 		</Value>
-		
+
 		<Value type="list" genre="config" instance="1" index="100" label="Enable /Disable endpoints IR external relay and External relay" size="1" min="0" max="3" value="0">
-			<Help>Enabling IR external relay and External relay or both of them, means that endpoint (IR external relay) and endpoint (External relay) or both will be prensent on UI. 
-				Disabling them will result in hiding endpoints according to parameter set value.Note that hiding endpoint has no impact on its functionality. 
-				Default value 0</Help>
-			<Item label="Endpoints IR external relay and External relay disabled" value="0" />
-			<Item label="Endpoints IR external relay disabled, External relay enabled" value="1" />
-			<Item label="Endpoints IR external relay enabled, External relay disabled" value="2" />
-			<Item label="Endpoints IR external relay and External relay enabled" value="3" />
+			<Help>Enabling IR external relay and External relay or both of them, means that endpoint (IR external relay) and endpoint (External relay) or both will be prensent on UI.
+				Disabling them will result in hiding endpoints according to parameter set value.Note that hiding endpoint has no impact on its functionality.
+				Default value 0
+			</Help>
+			<Item label="Endpoints IR external relay and External relay disabled" value="0"/>
+			<Item label="Endpoints IR external relay disabled, External relay enabled" value="1"/>
+			<Item label="Endpoints IR external relay enabled, External relay disabled" value="2"/>
+			<Item label="Endpoints IR external relay and External relay enabled" value="3"/>
+		</Value>
+
+		<Value type="short" genre="config" instance="1" index="110" label="Power auto-triggering relay(s) off" size="2" min="0" max="15000" value="0">
+			<Help>0 - Pmax auto OFF disabled.
+				1W to 15000W Auto OFF enabled, step is 1 Watt. Linked with param 111/112.
+				Default value 0 (disabled).
+			</Help>
+		</Value>
+
+		<Value type="short" genre="config" instance="1" index="111" label="Power auto-triggering off-time" size="2" min="30" max="32535" value="30">
+			<Help>30s to 32535s Auto OFF time, step is 1 sec, if param 110 pMax is reached.
+				Default value 30.
+			</Help>
+		</Value>
+
+		<Value type="list" genre="config" instance="1" index="112" label="Power auto-triggered OFF relay choice" size="1" min="0" max="3" value="0">
+			<Help>Switch OFF IR external relay and/or External relay or both of them, if param 110 pMax is reached.
+				Default value 0.
+			</Help>
+			<Item label="Switch OFF IR/Wired external relays" value="0"/>
+			<Item label="Switch OFF IR       external relay" value="1"/>
+			<Item label="Switch OFF Wired    external relay" value="2"/>
+			<Item label="Switch OFF Both     relays" value="3"/>
+		</Value>
+
+		<Value type="int" genre="config" instance="1" index="130" label="Serial NB" size="4" read_only="true" value="0">
+			<Help>Returns device S/N.</Help>
+		</Value>
+
+		<Value type="short" genre="config" instance="1" index="131" label="Firmware Version" size="2" read_only="true" value="0">
+			<Help>Returns device FW version.</Help>
+		</Value>
+
+		<Value type="short" genre="config" instance="1" index="132" label="Hardware Version" size="2" read_only="true" value="0">
+			<Help>Returns device HW version.</Help>
+		</Value>
+
+		<Value type="int" genre="config" instance="1" index="140" label="Voltage U1" units="deci-V" size="3" read_only="true" value="0">
+			<Help>Returns U1 in deci-Volts.</Help>
+		</Value>
+
+		<Value type="int" genre="config" instance="1" index="141" label="Intensity I1" units="milli-A" size="3" read_only="true" value="0">
+			<Help>Returns I1 in milli-Amp.</Help>
+		</Value>
+
+		<Value type="int" genre="config" instance="1" index="142" label="Active power Pt" units="deci-W" size="3" read_only="true" value="0">
+			<Help>Returns Pt in deci-Watt.</Help>
+		</Value>
+
+		<Value type="int" genre="config" instance="1" index="143" label="Reactive power Qt" units="deci-kVAR" size="3" read_only="true" value="0">
+			<Help>Returns Qt in deci-kVAR.</Help>
+		</Value>
+
+		<Value type="int" genre="config" instance="1" index="144" label="Power factor PFt" units="milli" size="2" read_only="true" value="0">
+			<Help>Returns PFt(x1000).</Help>
+		</Value>
+
+		<Value type="int" genre="config" instance="1" index="145" label="Energy counter 1, active power total (input)" units="deci-kWh" size="4" read_only="true" value="0">
+			<Help>Return Pin in deci-kWh.</Help>
+		</Value>
+
+		<Value type="int" genre="config" instance="1" index="146" label="Energy counter 2, reactive power total (input)" units="deci-kVARh" size="4" read_only="true" value="0">
+			<Help>Returns Qin in deci-kVARh.</Help>
+		</Value>
+
+		<Value type="int" genre="config" instance="1" index="147" label="Energy counter 3, active power total " units="deci-kVAh" size="4" read_only="true" value="0">
+			<Help>Returns Pt in deci-kVAh.</Help>
+		</Value>
+
+		<Value type="int" genre="config" instance="1" index="148" label="Energy counter 4, active power total (output)" units="deci-kWh" size="4" read_only="true" value="0">
+			<Help>Return Pout in deci-kWh.</Help>
 		</Value>
 	</CommandClass>
 
 	<!-- Association Groups -->
 	<CommandClass id="133">
-		<Associations num_groups="5">
+		<Associations num_groups="1">
 			<Group index="1" max_associations="1" label="Lifeline"/>
-			<Group index="2" max_associations="16" label="Basic on/off (IR external relay)"/>
-			<Group index="3" max_associations="16" label="Switch binary report (IR external relay)"/>
-			<Group index="5" max_associations="16" label="Basic on/off (External relay)"/>
-			<Group index="6" max_associations="16" label="Switch binary report (External relay)"/>
 		</Associations>
 	</CommandClass>
 
-	<CommandClass id="142" ForceInstances="true" />
+	<CommandClass id="142" ForceInstances="true"/>
 
 	<!-- Remove COMMAND_CLASS_BASIC -->
-	<CommandClass id="32" action="remove" />
-
-	<!-- Map endpoints to instances -->
-	<CommandClass id="96" mapping="endpoints" />
+	<CommandClass id="32" action="remove"/>
 
 </Product>
