@@ -178,6 +178,7 @@ Version 1.5
  - Add Aeotec ZW132, ZW139 and ZW140 Nano Switch (Nechry)
  - Add MCOHome Thermostat fan coil MH8-FC-EU (Nechry)
  - Add Fibaro FGDW002 Door Opening Sensor 2 (Nechry)
+ - Add Qubino ZMNHTDx Smart meter Z-Wave+ config for version 1 to 3 and 4 to 6, assume new device as 4 to 6 (Nechry)
  
 Version 1.4
  - Released 10th Jan, 2016
